modifié :         Makefile 	modifié :         rayTraceComputeShader.cpp 	modifié :         raytracer.cs

--- a/PoC/rayTraceComputeShader/Makefile
+++ b/PoC/rayTraceComputeShader/Makefile
@@ -2,4 +2,4 @@ make:
 	make rayTraceComputeShader
 
 rayTraceComputeShader:
-	g++ rayTraceComputeShader.cpp gl3w.c -o rayTraceComputeShader -lglfw -lGL -ldl
+	g++ rayTraceComputeShader.cpp gl3w.c -o rayTraceComputeShader -lglfw -lGL -ldl -std=c++11
